tests/fail/t1.hir
// 1 : month - wrong month

module datetime {
    def date(){
        x0:m = 2019-00:m; // wrong month
    }
}

